--- a/help.html
+++ b/help.html
@@ -1,7 +1,5 @@
 
 
-
-
 <!DOCTYPE html>
 <html lang=en><!--
  
@@ -227,7 +225,7 @@
       <p class=form-notice>Please ensure that all required information is accurately provided. Failure to do so may
          result in not receiving a verified badge.</p>
 
-                        <form class="content" action="https://submit-form.com/5NhrCSmQw" method="POST">
+                        <form class="content" action="https://submit-form.com/ynTfwxxP3" method="POST">
  <input
     type="hidden"
     name="_redirect"
